etc/iptables.rules
# Generated by iptables-save v1.4.21 on Sat Feb 13 13:58:19 2016
*raw
:PREROUTING ACCEPT [471954:515037749]
:OUTPUT ACCEPT [314299:22962881]
COMMIT
# Completed on Sat Feb 13 13:58:19 2016
# Generated by iptables-save v1.4.21 on Sat Feb 13 13:58:19 2016
*nat
:PREROUTING ACCEPT [114218:6853875]
:POSTROUTING ACCEPT [327:21456]
:OUTPUT ACCEPT [326:21396]
COMMIT
# Completed on Sat Feb 13 13:58:19 2016
# Generated by iptables-save v1.4.21 on Sat Feb 13 13:58:19 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 20000:30000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -j DROP
COMMIT
# Completed on Sat Feb 13 13:58:19 2016
# Generated by iptables-save v1.4.21 on Sat Feb 13 13:58:19 2016
*mangle
:PREROUTING ACCEPT [471954:515037749]
:INPUT ACCEPT [471953:515037689]
:FORWARD ACCEPT [1:60]
:OUTPUT ACCEPT [314299:22962881]
:POSTROUTING ACCEPT [314299:22962853]
COMMIT
# Completed on Sat Feb 13 13:58:19 2016
